--- a/2-scss/src/assets/scss/reset.scss
+++ b/2-scss/src/assets/scss/reset.scss
@@ -3,3 +3,21 @@
  */
 
 @import '~normalize.css';
+
+// 不习惯列表有序号
+ul,
+ol {
+  list-style: none;
+}
+
+// 不习惯自带边距
+ul,
+ol,
+h1,
+h2,
+h3,
+h4,
+h5 {
+  padding: 0;
+  margin: 0;
+}
